# recon

./: .checkgate  Cargo.toml  Makefile  README.md  install.sh
config/: scihub.conf.example  trust.conf.example
scripts/: check_debt.sh  check_file_sizes.sh  coverage.sh  ratchet.py
skill/: SKILL.md  query-strategy.md  recon.workflow.js  research.workflow.js  sources.md
src/: http.rs  main.rs  model.rs  store.rs
src/scihub/: fetch.rs  mirror.rs  mod.rs
src/sources/: crossref.rs  github.rs  grok.rs  hn.rs  mod.rs  openalex.rs  perplexity.rs  polymarket.rs
src/verify/: citations.rs  credibility.rs  mod.rs  support.rs
