[package]
name = "research"
version = "0.1.0"
edition = "2021"
description = "Terminal deep-research engine: retrieval + deterministic verification substrate"

[[bin]]
name = "research"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
url = "2"
anyhow = "1"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
